# findbrokenlinks

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: context.md  plan.md  task.md
src/findbrokenlinks/: __main__.py  cli.py  config.py  crawler.py  fetcher.py  models.py  rate_limiter.py  robots.py  scope.py
src/findbrokenlinks/checks/: __init__.py  antibot.py  base.py  http_status.py  network_error.py  redirect_chain.py  redirect_to_home.py  soft_404_pattern.py  soft_404_probe.py
src/findbrokenlinks/extractors/: base.py  html.py
src/findbrokenlinks/patterns/: builtin.yaml
src/findbrokenlinks/reporters/: __init__.py  base.py  csv_reporter.py  grouped_json_reporter.py  html_reporter.py  json_reporter.py  jsonlines_reporter.py  junit_reporter.py  markdown_reporter.py  sarif_reporter.py  tsv_reporter.py
tests/: conftest.py  test_antibot.py  test_autodiscover.py  test_checks.py  test_cli_validation.py  test_content_type_guard.py  test_crawler_integration.py  test_cycles.py  test_extension.py  test_extractor.py  test_fetcher_error_classification.py  test_fetcher_headers.py  test_fetcher_ssl_chain_fallback.py  test_fetcher_streaming.py  test_grouped_reporter.py  test_max_pages.py  test_output_templates.py  test_reporters.py  test_scope.py  test_scope_leak.py  test_sitemap.py  test_streaming.py
